...
    <string name="status">Status</string>
    <string name="favorit">Favorite</string>
    <string name="menit">&#160;Menit</string>
    <string name="content_description_banner">Foto banner</string>
    <string name="data_dihapus">Data dihapus!</string>
    <string name="data_disimpan">Data disimpan!</string>
    <string name="sort">Urutkan</string>
    <string name="sorted">Data diurutkan!</string>
    <string name="not_sorted">Data tidak diurutkan!</string>
</resources>
