...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorite.movie.FavoriteMovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_movie" />

    <ProgressBar
...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_data_kosong_favorite_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
...
