<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_hourglass"
        android:title="@string/favorit"
        android:contentDescription="@string/favorit"
        app:showAsAction="ifRoom" />

</menu>