...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorite.tvshow.FavoriteTvShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_movie" />

    <ProgressBar
...
